[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untitled_project_1"
version = "0.1.0"
description = "A tool to fetch and store Twitter/X bookmarks with vector search capabilities"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "playwright>=1.42.0",
    "flask>=3.1.2",
]

[tool.setuptools]
packages = ["db", "pipelines", "bookmarks", "utils", "scripts"]

[project.optional-dependencies]
# Default DeepSeek Vision Language Model dependencies
ds_vlm = [
    "attrdict==2.0.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "einops==0.8.1",
    "filelock==3.16.1",
    "fsspec==2024.10.0",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "packaging==24.2",
    "pillow==11.0.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "six==1.17.0",
    "sympy==1.13.3",
    "timm==1.0.15",
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "tqdm==4.67.1",
    "transformers==4.38.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "deepseek-vl @ file:///Users/gene/Developer/llms/DeepSeek-VL",
]

# Python 3.11 specific configuration for DeepSeek-VL
py311_dsvl = [
    "attrdict==2.0.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "einops==0.8.1",
    "filelock==3.16.1",
    "fsspec==2024.10.0",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "packaging==24.2",
    "pillow==11.0.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "six==1.17.0",
    "sympy==1.13.3",
    "timm==1.0.15",
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "tqdm==4.67.1",
    "transformers==4.38.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "deepseek-vl @ file:///Users/gene/Developer/llms/DeepSeek-VL",
]

[project.scripts]
untitled_project_1 = "scripts.run_scraper:main"
grab_headers = "scrapers.grab_headers:save_twitter_headers" 
