[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untitled_project_1"
version = "0.1.0"
description = "A tool to fetch and store Twitter/X bookmarks with vector search capabilities"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "playwright>=1.42.0",
    "flask>=3.1.2",
]

[tool.setuptools]
packages = ["db", "pipelines", "bookmarks", "utils", "scripts"]

[project.optional-dependencies]
# (Optional dependency groups removed: DeepSeek-VL is no longer used)

[project.scripts]
untitled_project_1 = "scripts.run_scraper:main"
grab_headers = "scrapers.grab_headers:save_twitter_headers" 
